--- a/examples/resconfig_local.json
+++ b/examples/resconfig_local.json
@@ -3,7 +3,5 @@
 	"walltime"      : 30,
 	"cpus"          : 32,
         "gpus_per_node" : 0,
-        "access_schema" : null,
-        "queue"         : null,
-        "project"       : null 
+        "access_schema" : "local" 
 }
