--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,11 @@
 language: python
-python: "2.7.13"
+python: "3.9"
 
 # command to install dependencies
 install:
   - pip install radical.pilot
   - pip install radical.entk
 
-#env variables
-env:
-  - RP_ENABLE_OLD_DEFINES=True RADICAL_PILOT_DBURL=mongodb://entk:entk@ds129013.mlab.com:29013/travis_tests
-
 # command to run tests
-script: python -m pytest -v
+script: python3 -m pytest -v
 
-# rabbitmq
-services:
-- rabbitmq
